# Module_4

./: .coverage  LICENSE  README.md  coverage.txt  pyproject.toml
data/: products.json
src/: load_products.py  main.py
tests/: test_load_products.py  test_main.py
